ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_01_08.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"feria-iv-of-epiphany\", \"feria-of-epiphanytide\"]"
expression: s.0
---
2025-01-08
Vespers of Feria IV of Epiphany:
Vespers:
  Antiphons:   Ordinary of Epiphanytide (or Psalter)
  Psalms:      Psalter
  Chapter:     Ordinary of Epiphanytide (or Psalter)
  Hymn:        Ordinary of Epiphanytide (or Psalter)
  Verse:       Ordinary of Epiphanytide (or Psalter)
  Magnificat:  Proper
  Collect:     Proper
