ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_01_11.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"the-most-holy-family-of-jesus--mary--joseph\", \"the-most-holy-family-of-jesus\"]"
expression: s.0
---
2025-01-11
First Vespers of The Most Holy Family of Jesus, Mary, Joseph:
Vespers:
  Antiphons:   Proper
  Psalms:      Proper
  Chapter:     Proper
  Hymn:        Proper
  Verse:       Proper
  Magnificat:  Proper
  Collect:     Proper
