ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_01_14.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"st--hilary--bishop-and-confessor-and-doctor-of-the-church\", \"st--hilary\"]"
expression: s.0
---
2025-01-14
Vespers of St. Hilary, Bishop and Confessor and Doctor of the Church:
Vespers:
  Antiphons:   Ordinary of Time after Epiphany (or Psalter)
  Psalms:      Psalter
  Chapter:     Common of Confessor Bishops
  Hymn:        Common of Confessor Bishops
  Verse:       Common of Confessor Bishops
  Magnificat:  Common of Confessor Bishops
  Collect:     Proper
