ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_01_15.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"st--paul--first-hermit-and-confessor\", \"st--paul\"]"
expression: s.0
---
2025-01-15
Vespers of St. Paul, first hermit and Confessor:
Vespers:
  Antiphons:   Ordinary of Time after Epiphany (or Psalter)
  Psalms:      Psalter
  Chapter:     Common of Confessors (Non-Bishop)
  Hymn:        Common of Confessors (Non-Bishop)
  Verse:       Common of Confessors (Non-Bishop)
  Magnificat:  Common of Confessors (Non-Bishop)
  Collect:     Proper
