ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_01_16.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"st--marcellus-i--pope-and-martyr\", \"st--marcellus-i\"]"
expression: s.0
---
2025-01-16
Vespers of St. Marcellus I, Pope and Martyr:
Vespers:
  Antiphons:   Ordinary of Time after Epiphany (or Psalter)
  Psalms:      Psalter
  Chapter:     Common of Martyrs
  Hymn:        Common of Martyrs
  Verse:       Common of Martyrs
  Magnificat:  Common of Martyrs
  Collect:     Proper
