ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_01_17.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"st--anthony--abbot\", \"st--anthony\"]"
expression: s.0
---
2025-01-17
Vespers of St. Anthony, Abbot:
Vespers:
  Antiphons:   Ordinary of Time after Epiphany (or Psalter)
  Psalms:      Psalter
  Chapter:     Common of Martyrs
  Hymn:        Common of Martyrs
  Verse:       Common of Martyrs
  Magnificat:  Common of Martyrs
  Collect:     Proper
